--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
 }
+
 html {
   font-family: "Roboto", sans-serif;
   font-size: 24px;
@@ -18,6 +19,7 @@ html {
 .clearfix {
   zoom: 1;
 }
+
 .clearfix::after {
   content: ".";
   clear: both;
@@ -33,8 +35,10 @@ header {
     url(images/tasty-food-top-view.jpg);
   background-size: cover;
   background-position: right;
+  background-attachment: fixed;
   height: 100vh;
 }
+
 .hero-text-box {
   position: absolute;
   width: 1140px;
@@ -86,6 +90,7 @@ header {
   padding-top: 90px;
   text-align: center;
 }
+
 .col {
   padding-top: 50px;
   padding-left: 10px;
@@ -136,6 +141,7 @@ header {
   transition: transform;
   opacity: 0.7;
 }
+
 .meals-showcase > li:hover > .meals-photo.fade-effect img {
   transform: scale(1.075);
   transition: transform, blur;
@@ -171,6 +177,7 @@ header {
 .how-it-works {
   background-color: #a7a7a73a;
 }
+
 .steps-box:first-child {
   text-align: right;
   padding-right: 3%;
@@ -190,10 +197,12 @@ header {
 .works-steps > div {
   text-align: left;
 }
+
 .works-steps > p {
   color: #505050;
   padding: 0 0 5% 10%;
 }
+
 .works-steps > div {
   text-align: center;
   color: #f85a11;
@@ -215,6 +224,7 @@ header {
   width: 27%;
   margin: 10px;
 }
+
 .hiw-heading {
   padding-top: 50px;
 }
@@ -225,21 +235,25 @@ header {
 .cities-section {
   color: #242424;
 }
+
 .city-features {
   color: #505050;
   margin-bottom: 5px;
   font-size: 20px;
   text-align: justify;
 }
+
 .cities_cities {
-  margin-top: 50px;
+  margin-top: 120px;
 }
+
 .box img {
   width: 100%;
   height: auto;
   margin-bottom: 15px;
   margin-top: -10px;
 }
+
 .twitter-links:link,
 .twitter-links:visited {
   text-decoration: none;
@@ -248,12 +262,50 @@ header {
   border-bottom: 1px solid transparent;
   transition: border-bottom 0.2s, color 0.2s;
 }
+
 .twitter-links:hover,
 .twitter-links:active {
   text-decoration: none;
   color: #f85a11;
   padding-bottom: 2.5px;
   border-bottom: 1px solid #f85a11;
+}
+
+/* ------------------------------------------- */
+/* CUSTOMER TESTIMONIALS SECTION */
+/* ------------------------------------------- */
+.Customer-Testimonials {
+  background-image: linear-gradient(rgba(63, 63, 63, 0.589), #802b009a),
+    url(images/back-customers.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #f5f5f5;
+  background-attachment: fixed;
+}
+
+.C-T-heading {
+  color: whitesmoke;
+  margin-top: 60px;
+}
+
+blockquote {
+  padding: 2%;
+  font-style: italic;
+  line-height: 145%;
+  text-align: left;
+}
+
+cite {
+  font-size: 90%;
+  margin-top: 25px;
+}
+
+cite img {
+  height: 70px;
+  margin-right: 10px;
+  border-radius: 50%;
+  display: block;
+  padding: 5px;
 }
 /* ------------------------------------------- */
 /* REUSABLE COMPONENTS */
@@ -350,6 +402,7 @@ h2::after {
   padding-top: 7px;
   padding-bottom: 7px;
 }
+
 .ghost-btn:hover,
 .ghost-btn:active {
   background-color: #f85a11;
@@ -378,6 +431,7 @@ h2::after {
   font-size: 150%;
   display: block;
 }
+
 .city-features > i {
   display: inline-block;
   width: 30px;
