--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -275,7 +275,7 @@ header {
 /* CUSTOMER TESTIMONIALS SECTION */
 /* ------------------------------------------- */
 .Customer-Testimonials {
-  background-image: linear-gradient(rgba(63, 63, 63, 0.589), #802b009a),
+  background-image: linear-gradient(rgba(63, 63, 63, 0.589), #0505059a),
     url(images/back-customers.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -293,6 +293,16 @@ blockquote {
   font-style: italic;
   line-height: 145%;
   text-align: left;
+  position: relative;
+}
+
+blockquote::before {
+  content: "\201C";
+  position: absolute;
+  font-size: 80px;
+  font-weight: 500;
+  left: -5px;
+  top: -14px;
 }
 
 cite {
