Adding Customer's response form

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -334,7 +334,7 @@ cite img {
   width: 98%;
   margin-left: 5%;
   text-align: left;
-  box-shadow: 0 0 2px #6d6d6d;
+  box-shadow: 0 0 2px #a0a0a0;
 }
 
 .plan-box div {
