--- a/resources/css/mediaqueries.css
+++ b/resources/css/mediaqueries.css
@@ -55,6 +55,7 @@
   .box p {
     font-size: 75%;
   }
+
   .our-menu {
     padding: 0px 0 50px 0;
   }
@@ -64,7 +65,6 @@
   }
   .meals-showcase > li > span {
     letter-spacing: 0.5px;
-    top: 3rem;
     font-size: 14px;
   }
 
@@ -72,23 +72,13 @@
     margin-top: 30px;
     text-align: center;
   }
-
   .steps-box:last-child {
     margin-top: 50px;
     margin-left: -40px;
   }
   .app-screen {
-    width: 50%;
+    width: 47%;
   }
-  .btn-appstore {
-    height: 30px;
-    margin: 15px;
-  }
-  .btn-playstore {
-    height: 40px;
-    width: 40%;
-  }
-
   .works-steps {
     font-size: 16px;
   }
@@ -100,15 +90,22 @@
     padding: 5px;
     /* margin-right: 10px; */
   }
+  .btn-appstore {
+    height: 30px;
+    margin: 15px;
+  }
+  .btn-playstore {
+    height: 40px;
+    width: 40%;
+  }
+
   .cities_cities {
     margin-top: 38px;
   }
-
   .city-features > i {
     width: 11.95px;
     font-size: 18px;
   }
-
   .city-features {
     font-size: 13.4px;
     font-weight: 300;
@@ -125,7 +122,6 @@
   blockquote {
     font-size: 18px;
   }
-
   cite img {
     margin-top: 20px;
   }
@@ -133,8 +129,89 @@
 
 /* Small phones to small tablets: from 481 to 767px */
 @media only screen and (max-width: 767px) {
+  body {
+    font-size: 16px;
+  }
+  section {
+    padding: 30px 0;
+  }
+  .row,
+  .hero-text-box {
+    padding: 0 4%;
+  }
+  .col {
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    margin: 0;
+  }
+  .main-nav {
+    display: none;
+  }
+  .Copyright-LongText {
+    width: 100%;
+    margin-left: 0;
+    text-align: justify;
+  }
+  h1 {
+    font-size: 180%;
+  }
+  h2 {
+    font-size: 150%;
+  }
+  .meals-showcase > li > span {
+    letter-spacing: 0.5px;
+    font-size: 11px;
+  }
+
+  .works-steps > div {
+    width: 40px;
+    height: 40px;
+  }
+  .steps-box:last-child {
+    margin-top: 10px;
+    margin-left: 0;
+  }
+  .app-screen {
+    width: 40%;
+  }
+  .sign-up {
+    margin-bottom: 20px;
+  }
+  .plan-box {
+    width: 92%;
+    margin-left: 3%;
+  }
+  .footer-nav li,
+  .social-media-nav li {
+    font-size: 10px;
+
+    margin-right: 10px;
+  }
+  .footer-nav {
+    display: block ruby;
+  }
+  .footer-nav-width {
+    width: 50% !important;
+  }
 }
 
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
+  section {
+    padding: 25px 0;
+  }
+  .contact-form {
+    width: 100%;
+  }
 }
+
+/* @media only screen and (min-width: 775px) and (max-width: 1023px) {
+  .steps-box:last-child {
+    margin-top: 120px;
+    margin-left: -40px;
+  }
+  .app-screen {
+    width: 50%;
+  }
+} */
