--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,12 +8,14 @@
   scroll-behavior: smooth;
 }
 
-html {
+html,
+body {
   font-family: "Roboto", sans-serif;
   font-size: 24px;
   font-weight: 200;
   color: #f5f5f5;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
 .clearfix {
@@ -159,15 +161,16 @@ header {
   font-size: 20px;
   letter-spacing: 1.5px;
   color: #f5f5f5;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  opacity: 0;
-  top: 4rem;
-  left: 4rem;
-  right: 4rem;
-  bottom: 4rem;
   position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  /* left: 0;
+  right: 0;
+  margin: auto;
+  width: 100px;
+  height: 100px; */
 }
 
 .meals-showcase > li:hover > span {
