--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,14 +53,23 @@ header {
   transform: translate(-50%, -50%);
 }
 
-.logo {
+.logo,
+.logo-black {
   height: 90px;
   width: auto;
   float: left;
   margin-top: 1.5%;
   margin-left: 0.08%;
 }
+.logo-black {
+  display: none;
+  height: 50px;
+  width: auto;
+  float: left;
+  margin-top: 5px;
+}
 
+/* MAIN NAVIGATION */
 .main-nav {
   float: right;
   list-style: none;
@@ -81,8 +90,40 @@ header {
   color: #f5f5f5;
 }
 
-.main-nav li a:hover,
-.main-nav li a:active {
+/* .sticky-nav .main-nav li a:hover,
+.sticky-nav .main-nav li a:active {
+  text-decoration: none;
+  color: #ff9666ee;
+  transition: color;
+} */
+
+/* STICKY NAVIGATION */
+.main-nav {
+  margin-top: 15px;
+}
+.sticky-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 2px 2px #efefef;
+}
+
+.sticky-nav .logo-black {
+  display: block;
+}
+.sticky-nav .logo {
+  display: none;
+}
+
+.sticky-nav .main-nav li a:link,
+.sticky-nav .main-nav li a:visited {
+  color: #111111;
+  text-decoration: none;
+}
+.sticky-nav .main-nav li a:hover,
+.sticky-nav .main-nav li a:active {
   text-decoration: none;
   color: #ff9666ee;
   transition: color;
