--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
 }
 
 html,
@@ -16,6 +16,7 @@ body {
   color: #f5f5f5;
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
+  /* position: relative; */
 }
 
 .clearfix {
@@ -90,24 +91,26 @@ header {
   color: #f5f5f5;
 }
 
-/* .sticky-nav .main-nav li a:hover,
-.sticky-nav .main-nav li a:active {
+.main-nav li a:hover,
+.main-nav li a:active {
   text-decoration: none;
   color: #ff9666ee;
   transition: color;
-} */
+}
 
 /* STICKY NAVIGATION */
-.main-nav {
-  margin-top: 15px;
+.sticky-nav .main-nav {
+  margin-top: 5px;
 }
 .sticky-nav {
   position: fixed;
+  z-index: 1;
   top: 0;
   left: 0;
   width: 100vw;
-  background-color: rgba(255, 255, 255, 0.7);
-  box-shadow: 0 2px 2px #efefef;
+  background-color: rgba(255, 255, 255, 0.95);
+  box-shadow: 0 2px 2px #a5a5a5;
+  padding-bottom: 0;
 }
 
 .sticky-nav .logo-black {
@@ -746,4 +749,26 @@ input[type="submit"]:active {
 /* .twitter-links:hover,
 .twitter-links:active*/ {
   transition: 0.4s;
+}
+
+/* ------------------------------------------- */
+/* ANIMATIONS */
+/* ------------------------------------------- */
+.js--wp-1,
+.js--wp-3 {
+  opacity: 0;
+}
+.js--wp-2 {
+  animation-duration: 5s;
+}
+
+.js--wp-1 .animate__animated .animate__bounceIn {
+  opacity: 1;
+}
+.js--wp-2 .animate__animated .animate__flip {
+  opacity: 1;
+}
+.js--wp-3 .animate__animated .animate__fadeIn {
+  opacity: 1;
+  animation-duration: 2s;
 }
