--- a/resources/css/mediaqueries.css
+++ b/resources/css/mediaqueries.css
@@ -296,6 +296,9 @@
     font-size: 8.5px;
     margin-right: 10px;
   }
+  .meals-section > ul > li {
+    width: 33%;
+  }
 }
 
 /* @media only screen and (min-width: 775px) and (max-width: 1023px) {
