made changes to meals section images layout

--- a/resources/css/mediaqueries.css
+++ b/resources/css/mediaqueries.css
@@ -296,7 +296,7 @@
     font-size: 8.5px;
     margin-right: 10px;
   }
-  .meals-section > ul > li {
+  .meals-section li {
     width: 33%;
   }
 }
